refactor: reorganize project to industry standard structure
- Created bin/cli.js as CLI entry point
- Moved src/index.js for main source code
- Moved tests/index.test.js for test files
- Added .gitignore with standard Node.js ignores
- Added LICENSE (MIT)
- Updated package.json with proper paths, repository info, and npm files list
- Bumped version to 2.0.0

--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
     "name": "git-cherry-release",
-    "version": "1.0.0",
-    "description": "CLI tool to cherry-pick commits from develop to release branch",
-    "main": "index.js",
+    "version": "2.0.0",
+    "description": "Interactive CLI tool to cherry-pick commits from develop to release branch",
+    "main": "src/index.js",
     "bin": {
-        "git-cherry-release": "./index.js"
+        "git-cherry-release": "./bin/cli.js"
     },
     "scripts": {
-        "test": "node test.js"
+        "start": "node bin/cli.js",
+        "test": "node tests/index.test.js",
+        "lint": "echo 'No linter configured'"
     },
     "keywords": [
         "git",
         "cherry-pick",
         "cli",
-        "release"
+        "release",
+        "interactive",
+        "workflow"
     ],
-    "author": "",
+    "author": "Danny213123",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Danny213123/git-ui.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Danny213123/git-ui/issues"
+    },
+    "homepage": "https://github.com/Danny213123/git-ui#readme",
     "engines": {
         "node": ">=14.0.0"
-    }
+    },
+    "files": [
+        "bin/",
+        "src/",
+        "README.md",
+        "LICENSE",
+        "CHANGELOG.md"
+    ]
 }
