--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "git-cherry-release",
-    "version": "2.0.0",
+    "name": "git-ui",
+    "version": "2.1.0",
     "description": "Interactive CLI tool to cherry-pick commits from develop to release branch",
     "main": "src/index.js",
     "bin": {
-        "git-cherry-release": "./bin/cli.js"
+        "git-ui": "./bin/cli.js"
     },
     "scripts": {
         "start": "node bin/cli.js",
